# nogameconsole

./: .gitignore  Makefile.am  README.md  bootstrap  configure.ac
lib/: Makefile.am  flag.cc  flag.h  hero.cc  hero.h  info.cc  info.h  map.cc  map.h  mine.cc  mine.h
lib/.deps/: flag.Po  hero.Po  info.Po  map.Po  maps.Po
src/: Makefile.am  main.cc
src/.deps/: main.Po
